tests/fixtures/valid_programs/variables.rzn
// tests/fixtures/valid_programs/variables.rzn
// Variable declarations and usage

fun main() -> int {
    var a: int = 10
    var b: int = 20
    var c: int = a + b
    var d: bool = true
    var e: str = "hello"
    
    if d {
        return c
    } else {
        return 0
    }
}
